# notetaker

./: .env.example  .gitignore  BACKLOG.md  SETUP.md  package-lock.json  package.json
scripts/: transcribe.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  recording.rs  sck_capture.rs  whisper_runner.rs
src-tauri/swift/: AudioCapture.swift
src/components/: ErrorBoundary.tsx  MeetingList.tsx  MeetingSetupView.tsx  ProcessingView.tsx  RecordingBar.tsx  SettingsModal.tsx  SummaryView.tsx
src/hooks/: useMeetingTypes.ts  useMeetings.ts  useRecording.ts  useSettings.ts  useTeamMembers.ts
src/services/: database.ts  llm.ts  notion.ts
src/store/: meetingStore.ts
src/types/: index.ts
src/utils/: env.ts
